Working game rules
Next up adding text saving stuff